--- a/install
+++ b/install
@@ -1,18 +1,32 @@
 #!/bin/sh
 # needs sudo rights
 
-# install vim
+# Pre-install
+apt-get update
+
+# Install vim
 echo 'installing vim...'
 apt-get install vim
 
-# install tmux
+# Install tmux
 echo 'installing tmux...'
 apt-get install tmux
 
-# install zsh
+# Install zsh
 echo 'installing zsh...'
 apt-get install zsh
 
-# install oh-my-zsh
+# Install oh-my-zsh
 echo 'installing oh-my-zsh...'
 wget --no-check-certificate https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+
+# Install Google Chrome
+wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+apt-get update
+apt-get install -y google-chrome-stable
+
+# Install F.lux
+add-apt-repository ppa:kilian/f.lux
+apt-get update
+apt-get install -y fluxgui
