--- a/install
+++ b/install
@@ -26,10 +26,24 @@ echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/source
 apt-get update
 apt-get install -y google-chrome-stable
 
-# Install F.lux
-add-apt-repository ppa:kilian/f.lux
-apt-get update
-apt-get install -y fluxgui
+# Install Redshift
+apt-get install redshift redshift-gtk
 
 # "Fix Ubuntu"
 wget -q -O - https://fixubuntu.com/fixubuntu.sh | bash
+
+# Install Java 8 from Oracle
+add-apt-repository ppa:webupd8team/java
+apt-get update
+apt-get install oracle-java8-installer
+
+# Install LAMP
+apt-get install -y apache2
+apt-get install -y mysql-server mysql-client && mysql_secure_installation
+apt-get install php5 libapache2-mod-php5 php5-mysql php5-curl php5-mcrypt
+a2enmod proxy && a2enmod rewrite
+
+# Install Composer
+apt-get install curl
+curl -sS https://getcomposer.org/installer | php
+mv composer.phar /usr/local/bin/composer
